force-app/main/default/objects/FD_Package__c/FD_Package__c.object-meta.xml
<CustomObject>
    <description>FD</description>
    <label>Package</label>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>