force-app/main/default/objects/FD_Package__c/fields/FD_Project__c.field-meta.xml
<CustomField>
    <fullName>FD_Project__c</fullName>
    <label>Project</label>
    <referenceTo>FD_Project__c</referenceTo>
    <relationshipLabel>Packages</relationshipLabel>
    <relationshipName>Packages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>