force-app/main/default/objects/FD_Package__c/fields/FD_Test_Level__c.field-meta.xml
<CustomField>
    <fullName>FD_Test_Level__c</fullName>
    <label>Test Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Tests</fullName>
                <default>true</default>
                <label>No Tests</label>
            </value>
            <value>
                <fullName>All Tests in Org</fullName>
            </value>
            <value>
                <fullName>Local Tests</fullName>
            </value>
            <value>
                <fullName>Specified Tests</fullName>
            </value>
            <value>
                <fullName>Specified  and Package Tests</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>